Fix alignment of images in hero

--- a/public/styles.css
+++ b/public/styles.css
@@ -169,6 +169,7 @@ i {
   margin-top: auto;
   margin-bottom: auto;
   max-width: 35rem;
+  padding-bottom: 1.1rem;
 }
 
 .hero > .carousel {
@@ -203,6 +204,7 @@ i {
 .hero > .text > h1 {
   font-size: 3.5rem;
   margin-bottom: 1rem;
+  margin-top: 0;
 }
 
 .hero > .text > h2 {
